fix logo alignment issue

--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ header {
   height: 100px;
   border: 0px solid #ffffff;
   perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  display: inline-block;
 }
 
 /* This container is needed to position the front and back side */
